<resources>
    <string name="app_name">AndroidWidgetTask</string>
    <string name="my_requests">My Requests</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="view_all">View All</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="_14_sep_18_sep_9_00_am">14 Sep - 18 Sep | 9:00 AM</string>
    <string name="tickets">Tickets</string>
    <string name="show_ticket">Show Ticket</string>
    <string name="weather">Weather</string>
    <string name="utilities_bills"><![CDATA[Utilities & Bills]]></string>
    <string name="total_bills">Total Bills</string>
    <string name="total_due">Total Due</string>
    <string name="activity">Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
